sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:15: error: ':' expected but ')' found.
def insertion(ecart){
                   ^AlgShellSort:30: error: identifier expected but '}' found.
}
^